# test-data-doc-generator

./: .gitignore  CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENSE  PRIVACY.md  README.md  SPEC.md  doc_generator_gui.py  installer.iss  main.py  pyproject.toml  requirements.txt  ui.html
docs/: CONTRIBUTING.md  TROUBLESHOOTING.md  index.html
recordforge/: __init__.py  __main__.py  cli.py
recordforge/core/: __init__.py  faker_utils.py  models.py  seed.py  watermark.py
recordforge/generators/: __init__.py
recordforge/generators/data/: __init__.py  customers.py  employees.py  inventory.py  messy.py  transactions.py  vendors.py
recordforge/generators/documents/: __init__.py  contract.py  intake_form.py  invoice.py  offer_letter.py  purchase_order.py  sop.py
recordforge/renderers/: __init__.py  docx.py  html.py  pdf.py  xlsx.py
recordforge/renderers/templates/: document.html.j2
recordforge/ui/: app.py  ui.html
tests/: test_smoke.py
