[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "recordforge"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "pywebview>=4.4",
    "reportlab>=4.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "typer>=0.12",
    "jinja2>=3.1",
]

[project.scripts]
recordforge = "recordforge.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["recordforge*"]
